FLa4a News

CHANGES IN FLa4a 0.130.0:

	NEW FEATURES:
		tests on simulate revised and extended
		tests on WCSAM revised
	BUG FIXES:
		mvrnorm bugfix for empirical = T and n < length(mu) fixed by an internal function "mvrEmpT" which is called by simulate. 

CHANGES IN FLa4a 0.120.0:

	NEW FEATURES:
		simulate includes the argument "empirical" to be passed to mvrnorm
		l2a checks t0 that generate negative ages
		tests on l2a and predict revised and extended
	BUG FIXES:
		bug on indexing surveytime fixed
		bug on name matching between parameters and indices names fixed


CHANGES IN FLa4a 0.110.0:

	NEW FEATURES:
		class a4aStkParams includes a "wt" slot to carry on stock weights
		method a4aSCA uses an age range for biomass indices that is set in the range slot of the index
		method a4aSCA tags the index FLQuant using attr with info about the range and if it is a biomass index
		method simulate takes into account the range of the biomass index	
	BUG FIXES:
		